libhsplasma update to 689, which now uses cmake, which gives us a universal variant for free
git-svn-id: https://svn.macports.org/repository/macports/trunk@71879 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem                  1.0
+PortGroup                   cmake 1.0
 
 name                        libhsplasma
-version                     0.0-659
-revision                    1
+version                     0.0-689
 categories                  devel
 platforms                   darwin
 maintainers                 ryandesign
@@ -21,50 +21,32 @@ long_description            libHSPlasma is a library for reading files used \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/libhsplasma
-hg.tag                      019918637533
-
-depends_build               port:coreutils
+hg.tag                      1250ce53d31d
 
 depends_lib                 port:zlib \
                             port:jpeg \
                             port:openssl \
                             port:python26
 
-patchfiles                  patch-cp-parents
+patchfiles                  patch-Python-CMakeLists.txt.diff
 
-universal_variant           no
+configure.args-append       -DDISABLE_PYTHON:BOOL=OFF \
+                            -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers \
+                            -DPYTHON_LIBRARY:FILEPATH=${prefix}/lib/libpython2.6.dylib
 
-configure.args              --no-debug \
-                            --with-pkgconfig \
-                            --with-python=${prefix}/Library/Frameworks/Python.framework/Versions/2.6 \
-                            --with-zlib=${prefix} \
-                            --with-jpeg=${prefix} \
-                            --with-ssl=${prefix}
-
-# Prevent problems building when a previous version is installed.
-pre-configure {
-    if {[file exists ${prefix}/lib/libHSPlasma.dylib]} {
-        return -code error "deactivate your existing version of ${name} before attempting to build the new one"
-    }
-}
-
-build.args                  CXX=${configure.cxx}
-
-destroot.target             install-dev
-destroot.destdir            PREFIX=${destroot}${prefix}
+set pyhsplasma              ${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/PyHSPlasma.so
 
 post-destroot {
-    eval reinplace "s|${destroot}||g" [glob ${destroot}${prefix}/lib/pkgconfig/*.pc]
+    xinstall -d ${destroot}[file dirname ${pyhsplasma}]
+    move ${destroot}${prefix}/lib/PyHSPlasma.dylib ${destroot}${pyhsplasma}
+    system "install_name_tool -id ${pyhsplasma} ${destroot}${pyhsplasma}"
 }
 
-variant debug description {Build with debugging symbols} {
-    configure.args-delete   --no-debug
-}
-
-platform darwin 8 {
-    # configure script requires bash 3 but Tiger has bash 2
-    depends_build-append    port:bash
-    configure.cmd           ${prefix}/bin/bash ./configure
+pre-activate {
+    # Oops, libhsplasma 0.0-659_1 and earlier installed this lib directly
+    if {[file exists ${pyhsplasma}]} {
+        delete ${pyhsplasma}
+    }
 }
 
 livecheck.type              regex
