--- a/dports/games/sounddecompress/Portfile
+++ b/dports/games/sounddecompress/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 
 name                        sounddecompress
 version                     1.11
-revision                    1
+revision                    2
 platforms                   darwin
 categories                  games audio sysutils
 maintainers                 ryandesign
@@ -45,11 +45,8 @@ depends_run                 port:python26
 
 extract.mkdir               yes
 
-post-extract {
-    copy ${filespath}/sounddecompress.py.in ${workpath}/sounddecompress.py
-}
-
-patchfiles                  patch-wxSoundDecompress.py.diff
+patchfiles                  patch-sounddecompress.py.diff \
+                            patch-wxSoundDecompress.py.diff
 
 post-patch {
     reinplace "s|^#!/usr/bin/env python$|#!${prefix}/bin/python2.6|g" \
@@ -61,14 +58,10 @@ post-patch {
 
 use_configure               no
 
-build {
-    reinplace "s|@PREFIX@|${prefix}|g" ${workpath}/sounddecompress.py
-}
+build                       {}
 
 destroot {
-    xinstall ${workpath}/sounddecompress.py ${destroot}${prefix}/bin
-    xinstall -d ${destroot}${prefix}/libexec/${name}
-    xinstall ${worksrcpath}/sounddecompress.py ${destroot}${prefix}/libexec/${name}
+    xinstall ${worksrcpath}/sounddecompress.py ${destroot}${prefix}/bin
 #    xinstall ${worksrcpath}/wxSoundDecompress.py ${destroot}${prefix}/bin
     set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir}
