PlasmaClient: update to 233, universal is now possible since libhsplasma is now universal, be more explicit about what python we want to link with, update for latest bullet and its changed header location
git-svn-id: https://svn.macports.org/repository/macports/trunk@71881 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -5,7 +5,7 @@ PortSystem                  1.0
 PortGroup                   cmake 1.0
 
 name                        PlasmaClient
-version                     0.0-207
+version                     0.0-233
 categories                  games
 platforms                   darwin
 maintainers                 ryandesign
@@ -22,7 +22,7 @@ long_description            ${name} is an open-source cross-platform \
 
 fetch.type                  hg
 hg.url                      http://uru.zrax.net/hg/plasmaclient
-hg.tag                      1924af79d98c
+hg.tag                      9b0fa8db3071
 
 # Decompress these into MO:ULa data dir
 #http://stashbox.org/919902/python.zip
@@ -36,9 +36,6 @@ depends_lib                 port:bullet \
                             port:openssl \
                             port:libsdl \
                             port:libhsplasma
-
-# libhsplasma is not universal
-universal_variant           no
 
 if {![file exists ${prefix}/lib/libboost_python-mt.dylib]} {
     depends_lib-delete port:boost
@@ -60,12 +57,9 @@ post-extract {
     copy ${filespath}/PlasmaClient.in ${workpath}/PlasmaClient
 }
 
-# Uncomment and edit to try out other ages on panic link
-#post-patch {
-#    reinplace {s/"Personal"/"Teledahn"/} ${worksrcpath}/plasmalib/prp/physics/pcCollisionDetector.cpp
-#}
-
-configure.args              -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers
+configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
+                            -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers \
+                            -DPYTHON_LIBRARY:FILEPATH=${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/config/libpython2.6.dylib
 
 post-build {
     reinplace "s|@PREFIX@|${prefix}|g" ${workpath}/PlasmaClient
