textproc/tcl-dox: Ensure we are UsingTheRightCompiler
git-svn-id: https://svn.macports.org/repository/macports/trunk@71883 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/tcl-dox/Portfile
+++ b/dports/textproc/tcl-dox/Portfile
@@ -39,6 +39,7 @@ patch.dir       ${worksrcpath}/src
 use_configure   no
 
 build.dir       ${worksrcpath}/src
+build.args      CC=${configure.cc}
 
 destroot {
     # docs
