gprolog, yap, yap-devel: Updated maintainer email address; see #26567
git-svn-id: https://svn.macports.org/repository/macports/trunk@71884 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/gprolog/Portfile
+++ b/dports/lang/gprolog/Portfile
@@ -5,7 +5,7 @@ name		gprolog
 version		1.3.1
 
 categories	lang
-maintainers	mac.com:pmoura
+maintainers	logtalk.org:pmoura
 platforms	darwin
 description	GNU Prolog compiler
 
