--- a/dports/lang/yap/Portfile
+++ b/dports/lang/yap/Portfile
@@ -5,7 +5,7 @@ PortSystem	1.0
 name		yap
 version		6.0.5
 categories	lang
-maintainers	mac.com:pmoura
+maintainers	logtalk.org:pmoura
 platforms	darwin
 description	YAP Prolog compiler
 
