--- a/dports/lang/yap-devel/Portfile
+++ b/dports/lang/yap-devel/Portfile
@@ -4,7 +4,7 @@ PortSystem	1.0
 name		yap-devel
 version		4.5.6
 categories	lang
-maintainers	mac.com:pmoura
+maintainers	logtalk.org:pmoura
 platforms	darwin
 description	YAP Prolog compiler
 
