PlasmaClient: specify the libsdl we want to link with, so we don't accidentally use an SDL.framework if the user has one; help Tiger find the right libsdl LDFLAGS
git-svn-id: https://svn.macports.org/repository/macports/trunk@71885 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -6,6 +6,7 @@ PortGroup                   cmake 1.0
 
 name                        PlasmaClient
 version                     0.0-233
+revision                    1
 categories                  games
 platforms                   darwin
 maintainers                 ryandesign
@@ -59,7 +60,9 @@ post-extract {
 
 configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
                             -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers \
-                            -DPYTHON_LIBRARY:FILEPATH=${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/config/libpython2.6.dylib
+                            -DPYTHON_LIBRARY:FILEPATH=${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/config/libpython2.6.dylib \
+                            -DSDL_INCLUDE_DIR=${prefix}/include/SDL \
+                            -DSDL_LIBRARY=${prefix}/lib/libSDL.dylib
 
 post-build {
     reinplace "s|@PREFIX@|${prefix}|g" ${workpath}/PlasmaClient
@@ -74,10 +77,6 @@ post-destroot {
     xinstall -d -m 777 ${destroot}${prefix}/var/log/${name}
 }
 
-platform darwin 8 {
-    configure.ldflags-append -lcrypto -ljpeg -lz -lSDLmain
-}
-
 notes "
 To run PlasmaClient, write your Myst Online: URU Live again username and password into the preferences plist like this:
 
@@ -86,6 +85,13 @@ To run PlasmaClient, write your Myst Online: URU Live again username and passwor
 
 (replacing YOURUSERNAME with your username and YOURPASSWORD with your password). Then open PlasmaClient in ${applications_dir}.
 "
+
+platform darwin 8 {
+    depends_build-append port:pkgconfig
+    pre-configure {
+        configure.ldflags-append -lcrypto -ljpeg -lz [exec pkg-config sdl --libs]
+    }
+}
 
 livecheck.type              regex
 livecheck.url               ${hg.url}
