PlasmaClient: add notes so people know not to expect this to work at all on PowerPC or Tiger for now
git-svn-id: https://svn.macports.org/repository/macports/trunk@71886 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -86,7 +86,12 @@ To run PlasmaClient, write your Myst Online: URU Live again username and passwor
 (replacing YOURUSERNAME with your username and YOURPASSWORD with your password). Then open PlasmaClient in ${applications_dir}.
 "
 
+platform darwin powerpc {
+    notes-append "\n\n${name} probably does not work at all on PowerPC Macs at this time; try an Intel Mac."
+}
+
 platform darwin 8 {
+    notes-append "\n\n${name} probably does not work at all on Mac OS X 10.4 Tiger at this time; try a later version of Mac OS X."
     depends_build-append port:pkgconfig
     pre-configure {
         configure.ldflags-append -lcrypto -ljpeg -lz [exec pkg-config sdl --libs]
