whois: support non-default-build_arch
git-svn-id: https://svn.macports.org/repository/macports/trunk@71887 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/whois/Portfile
+++ b/dports/net/whois/Portfile
@@ -57,21 +57,20 @@ post-configure {
         ${worksrcpath}/whois.1
 }
 
-set my_includes {}
-set my_libs {}
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
 
 build.target-append         pos
-build.env                   CC=${configure.cc} \
+build.env                   CC="${configure.cc} ${archflags}" \
                             CONFIG_FILE=${prefix}/etc/whois.conf \
                             LOCALEDIR=${prefix}/share/locale
-
-pre-build {
-    eval lappend my_includes ${configure.cflags} ${configure.cppflags}
-    eval lappend my_libs ${configure.ldflags}
-    build.args              prefix=${prefix} \
-                            INCLUDES="${my_includes}" \
-                            LIBS="${my_libs}"
-}
+build.args                  prefix=${prefix} \
+                            INCLUDES="${configure.cflags} ${configure.cppflags}" \
+                            LIBS="${configure.ldflags}"
 
 destroot.target-append      install-pos
 destroot.args               prefix=${destroot}${prefix}
@@ -86,11 +85,6 @@ post-activate {
         ui_msg "${prefix}/etc/whois.conf.sample to"
         ui_msg "${prefix}/etc/whois.conf and then make changes."
     }
-}
-
-variant universal {
-    eval lappend my_includes ${configure.universal_cflags}
-    eval lappend my_libs ${configure.universal_ldflags}
 }
 
 livecheck.type              regex
