yap: add variants for some options, update description; see #26568
git-svn-id: https://svn.macports.org/repository/macports/trunk@71889 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/yap/Portfile
+++ b/dports/lang/yap/Portfile
@@ -5,6 +5,7 @@ PortSystem	1.0
 name		yap
 conflicts	yap-devel
 version		6.0.5
+revision	1
 categories	lang
 maintainers	logtalk.org:pmoura
 platforms	darwin
@@ -12,7 +13,7 @@ description	YAP Prolog compiler
 
 long_description	\
 		YAP is a high-performance Prolog compiler developed at    \
-		LIACC/Universidade do Porto and at COPPE Sistemas/UFRJ.   \
+		CRACS/Universidade do Porto and at COPPE Sistemas/UFRJ.   \
 		Its Prolog engine is based in the WAM (Warren Abstract    \
 		Machine), with several optimizations for better           \
 		performance. YAP follows the Edinburgh tradition, and     \
@@ -28,11 +29,36 @@ depends_lib		port:readline port:gmp
 
 worksrcdir      yap-6
 
-configure.args	--enable-threads=yes --enable-coroutining=yes \
-			--with-gmp=${prefix} --with-readline=${prefix}
+configure.args  --with-gmp=${prefix} \
+                --with-readline=${prefix}
 
 if {${os.platform} == "darwin" && ${build_arch} == "x86_64"} {
     configure.args-append --build=${build_arch}-apple-${os.platform}${os.version}
+}
+
+default_variants +java
+
+variant tabling {
+    configure.args-append --enable-tabling
+}
+
+variant java {
+    configure.args-append --with-jpl=/Library/Java/Home
+}
+
+variant condor {
+    configure.args-append --enable-condor
+}
+
+variant threads {
+    configure.args-append --enable-threads
+    configure.args-append --enable-pthread-locking
+    configure.args-append --enable-or-parallelism
+}
+
+variant debug {
+    configure.args-append --enable-debug-yap
+    configure.args-append --enable-low-level-tracer
 }
 
 livecheck.url   ${homepage}downloads.html
