--- a/dports/lang/yap-devel/Portfile
+++ b/dports/lang/yap-devel/Portfile
@@ -3,8 +3,9 @@
 PortSystem	1.0
 
 name		yap-devel
+set real_name   yap
 conflicts	yap
-version		4.5.6
+version		6.0.7
 categories	lang
 maintainers	logtalk.org:pmoura
 platforms	darwin
@@ -12,26 +13,54 @@ description	YAP Prolog compiler
 
 long_description	\
 		YAP is a high-performance Prolog compiler developed at    \
-		LIACC/Universidade do Porto and at COPPE Sistemas/UFRJ.   \
+		CRACS/Universidade do Porto and at COPPE Sistemas/UFRJ.   \
 		Its Prolog engine is based in the WAM (Warren Abstract    \
 		Machine), with several optimizations for better           \
 		performance. YAP follows the Edinburgh tradition, and     \
 		is largely compatible with the ISO-Prolog standard and    \
 		with Quintus and SICStus Prolog.
 
-homepage        http://www.ncc.up.pt/~vsc/Yap
-master_sites    ${homepage}/Yap4.5/
+homepage        http://www.dcc.fc.up.pt/~vsc/Yap/
 
-checksums	md5 9b02b62d40b0639b4dd00d5cdd3f1e1d
+fetch.type          git
+git.url             git://yap.dcc.fc.up.pt/yap-6
+git.branch          8ee9cc2d492f7b085104798d5a34bd9545a4844b
 
-depends_lib	lib:libreadline.5:readline
+depends_lib		port:readline port:gmp
 
-distname	Yap-${version}
+worksrcdir      yap-6
 
-configure.cflags-append "-I${prefix}/include"
+configure.args  --with-gmp=${prefix} \
+                --with-readline=${prefix}
 
-variant coroutines {
-	configure.args-append	--enable-coroutining=yes
+if {${os.platform} == "darwin" && ${build_arch} == "x86_64"} {
+    configure.args-append --build=${build_arch}-apple-${os.platform}${os.version}
 }
 
-default_variants	+coroutines
+default_variants +java
+
+variant tabling {
+    configure.args-append --enable-tabling
+}
+
+variant java {
+    configure.args-append --with-java=/Library/Java/Home
+}
+
+variant condor {
+    configure.args-append --enable-condor
+}
+
+variant threads {
+    configure.args-append --enable-threads
+    configure.args-append --enable-pthread-locking
+    configure.args-append --enable-or-parallelism
+}
+
+variant debug {
+    configure.args-append --enable-debug-yap
+    configure.args-append --enable-low-level-tracer
+}
+
+livecheck.url   ${homepage}downloads.html
+livecheck.regex {yap-([0-9.]+)}
