PlasmaClient: verbose build output
git-svn-id: https://svn.macports.org/repository/macports/trunk@71892 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -59,6 +59,7 @@ post-extract {
 }
 
 configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
+                            -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE \
                             -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers \
                             -DPYTHON_LIBRARY:FILEPATH=${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/config/libpython2.6.dylib \
                             -DSDL_INCLUDE_DIR=${prefix}/include/SDL \
