PlasmaClient: fix Leopard and Snow Leopard by always manually shoving in the SDL LDFLAGS, apparently
git-svn-id: https://svn.macports.org/repository/macports/trunk@71893 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -29,6 +29,8 @@ hg.tag                      9b0fa8db3071
 #http://stashbox.org/919902/python.zip
 #http://stashbox.org/998132/sdl.zip
 
+depends_build-append        port:pkgconfig
+
 depends_lib                 port:bullet \
                             port:python26 \
                             port:boost \
@@ -65,6 +67,10 @@ configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
                             -DSDL_INCLUDE_DIR=${prefix}/include/SDL \
                             -DSDL_LIBRARY=${prefix}/lib/libSDL.dylib
 
+pre-configure {
+    configure.ldflags-append [exec pkg-config sdl --libs]
+}
+
 post-build {
     reinplace "s|@PREFIX@|${prefix}|g" ${workpath}/PlasmaClient
 }
@@ -93,10 +99,7 @@ platform darwin powerpc {
 
 platform darwin 8 {
     notes-append "\n\n${name} probably does not work at all on Mac OS X 10.4 Tiger at this time; try a later version of Mac OS X."
-    depends_build-append port:pkgconfig
-    pre-configure {
-        configure.ldflags-append -lcrypto -ljpeg -lz [exec pkg-config sdl --libs]
-    }
+    configure.ldflags-append -lcrypto -ljpeg -lz
 }
 
 livecheck.type              regex
