nestedsums: use xcodeversion portgroup
git-svn-id: https://svn.macports.org/repository/macports/trunk@71894 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/nestedsums/Portfile
+++ b/dports/math/nestedsums/Portfile
@@ -1,6 +1,8 @@
 # $Id$
 
 PortSystem 1.0
+PortGroup xcodeversion 1.0
+
 name		nestedsums
 version		1.4.12
 categories	math
@@ -19,8 +21,7 @@ checksums	sha1    07c19f2bf6a2cd43555deb9f5d16ec7ea7a97f65 \
 
 depends_lib	port:GiNaC
 
-#user_notes	On Tiger (10.4.x), Xcode 2.1 is required to avoid a bug
-#		in gcc which causes one of the tests to fail.
+minimum_xcodeversions {8 2.1}
 
 test.run	yes
 test.target	check
