scantailor: fix for a build incompatibility with boost 1.44.0; see #26624
git-svn-id: https://svn.macports.org/repository/macports/trunk@71896 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/scantailor/Portfile
+++ b/dports/graphics/scantailor/Portfile
@@ -32,6 +32,8 @@ checksums                       md5     58f7c549284d9fb92f25d15e1f66bae2 \
                                 sha1    d3523cb5e9ebb95f2e1d20962595a1fc8f064526 \
                                 rmd160  5bfaa1f55fc42fd6d044a261332ff64d471fdd72
 
+patchfiles                      patch-ProjectFilesDialog.cpp.diff
+
 post-destroot {                 set docdir ${destroot}${prefix}/share/doc/${name}
                                 xinstall -d ${docdir}
                                 xinstall -m 644 -W ${worksrcpath} \
