PlasmaClient: using "pkg-config sdl --libs" gave us too much library and stopped the app working at all on Tiger and Leopard
git-svn-id: https://svn.macports.org/repository/macports/trunk@71898 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -6,7 +6,7 @@ PortGroup                   cmake 1.0
 
 name                        PlasmaClient
 version                     0.0-233
-revision                    1
+revision                    2
 categories                  games
 platforms                   darwin
 maintainers                 ryandesign
@@ -28,8 +28,6 @@ hg.tag                      9b0fa8db3071
 # Decompress these into MO:ULa data dir
 #http://stashbox.org/919902/python.zip
 #http://stashbox.org/998132/sdl.zip
-
-depends_build-append        port:pkgconfig
 
 depends_lib                 port:bullet \
                             port:python26 \
@@ -65,11 +63,7 @@ configure.args              -DBULLET_INCLUDE_DIR:PATH=${prefix}/include/bullet \
                             -DPYTHON_INCLUDE_DIR:PATH=${frameworks_dir}/Python.framework/Versions/2.6/Headers \
                             -DPYTHON_LIBRARY:FILEPATH=${frameworks_dir}/Python.framework/Versions/2.6/lib/python2.6/config/libpython2.6.dylib \
                             -DSDL_INCLUDE_DIR=${prefix}/include/SDL \
-                            -DSDL_LIBRARY=${prefix}/lib/libSDL.dylib
-
-pre-configure {
-    configure.ldflags-append [exec pkg-config sdl --libs]
-}
+                            -DSDL_LIBRARY="${prefix}/lib/libSDLmain.a\;${prefix}/lib/libSDL.dylib\;-framework Cocoa"
 
 post-build {
     reinplace "s|@PREFIX@|${prefix}|g" ${workpath}/PlasmaClient
