etherape: update to 0.9.9
git-svn-id: https://svn.macports.org/repository/macports/trunk@71899 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/etherape/Portfile
+++ b/dports/net/etherape/Portfile
@@ -3,7 +3,7 @@
 PortSystem      1.0
 
 name            etherape
-version         0.9.7
+version         0.9.9
 categories      net
 maintainers     nomaintainer
 description     graphical network monitor
@@ -15,26 +15,13 @@ long_description  \
           Ring, ISDN, PPP and SLIP devices. It can filter traffic to be shown, \
           and can read traffic from a file as well as live from the network.
 homepage        http://etherape.sourceforge.net/
-master_sites    sourceforge:etherape
+master_sites    sourceforge
 platforms       darwin
-checksums       md5 7b5783090d92abe79634da4b582c6b48
+checksums       md5 5ac4d386284fe8ed31860656cdfefb45 \
+                sha1 8ff818d625a0c7fed4c1d5373ec5665ee0aa9f3d
 
+depends_build   port:gnome-doc-utils
 depends_lib     port:libgnomeui \
-                port:libglade2 \
-                port:libiconv \
-                port:gettext \
                 port:libpcap
-                
-configure.args  --mandir=${prefix}/share/man \
-                --disable-thread-resolver
 
-configure.ldflags-append "-lintl -lresolv"
-configure.cflags-append "-I${prefix}/include"
-
-platform darwin  {
-    patchfiles patch-util.h
-}
-
-post-extract {
-    reinplace "s|,--export-dynamic| |g" ${worksrcpath}/src/Makefile.in
-}
+patchfiles      configure.patch
