ghostscript 9.00 (official) Ticket #26588
git-svn-id: https://svn.macports.org/repository/macports/trunk@71901 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/ghostscript/Portfile
+++ b/dports/print/ghostscript/Portfile
@@ -5,8 +5,7 @@ PortGroup       muniversal 1.0
 
 name            ghostscript
 version         9.00
-set version_sub rc2
-revision        3
+revision        4
 categories      print
 maintainers     takanori openmaintainer
 description     GPL Ghostscript, An interpreter for PostScript and PDF
@@ -16,11 +15,9 @@ long_description \
                 supports many different printers and some displays.
 platforms       darwin
 homepage        http://www.cs.wisc.edu/~ghost/
-master_sites    http://ghostscript.com/~chrisl/:source \
+master_sites    sourceforge:${name}:source \
                 sourceforge:gs-fonts:fonts \
                 macports:pTeX:misc
-#               sourceforge:${name}:source
-distname        ${name}-${version}${version_sub}
 distfiles       ${distname}.tar.gz:source \
                 ghostscript-fonts-other-6.0.tar.gz:fonts \
                 mappingresources4pdf_2unicode-20091208.tar.Z:misc \
@@ -28,7 +25,7 @@ distfiles       ${distname}.tar.gz:source \
 patchfiles      patch-base_unix-dll.mak.diff \
                 patch-base_stdpre.h.diff \
                 patch-base_unixinst.mak.diff
-checksums       ${distname}.tar.gz rmd160 c49ff07dc9b5c07f8500bfea3fbf6c4bfd56a369 \
+checksums       ${distname}.tar.gz rmd160 771d5d517ee5962c9449148f258c784549af3fb4 \
                 ghostscript-fonts-other-6.0.tar.gz rmd160 ab60dbf71e7d91283a106c3df381cadfe173082f \
                 mappingresources4pdf_2unicode-20091208.tar.Z rmd160 bc1b86e6a5f0e022f88070195eb3e01e167114a7 \
                 mappingresources4pdf_other-20091208.tar.Z    rmd160 1e2ea9af6be8b60c9a54963e542fa06ceb2daccd
@@ -79,8 +76,8 @@ configure.cppflags-append       "-isystem${prefix}/include"
 configure.args  --disable-compile-inits \
                 --disable-cups \
                 --disable-gtk \
-                --with-system-libtiff \
-                --disable-freetype
+                --with-system-libtiff
+#               --disable-freetype
 
 build.target        so
 use_parallel_build  no
