couchdb: variable cleanup, inspired by ticket #26632
git-svn-id: https://svn.macports.org/repository/macports/trunk@71903 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/couchdb/Portfile
+++ b/dports/databases/couchdb/Portfile
@@ -43,6 +43,7 @@ set logdir ${prefix}/var/log/couchdb
 set dbdir ${prefix}/var/lib/couchdb
 set plistdir /Library/LaunchDaemons
 startupitem.uniquename org.apache.couchdb
+set plist ${startupitem.uniquename}.plist
 
 post-destroot {
     addgroup ${dbgroup}
@@ -54,11 +55,10 @@ post-destroot {
     destroot.keepdirs-append \
         ${destroot}${dbdir} \
         ${destroot}${logdir}
-    set plist org.apache.couchdb.plist
-    system "cd ${destroot}/Library/LaunchDaemons && ln -sf ${prefix}/Library/LaunchDaemons/${plist}"
+    system "cd ${destroot}${plistdir} && ln -sf ${prefix}${plistdir}/${plist}"
 # the following patches can be removed after next version
-    reinplace "s;`/opt/local/bin/icu-config --invoke`;;" ${destroot}${prefix}/bin/couchdb
-    reinplace "s;^.*DYLD_LIBRARY_PATH.*$;;g" ${destroot}${prefix}/Library/LaunchDaemons/org.apache.couchdb.plist
+    reinplace "s;`${prefix}/bin/icu-config --invoke`;;" ${destroot}${prefix}/bin/couchdb
+    reinplace "s;^.*DYLD_LIBRARY_PATH.*$;;g" ${destroot}${prefix}${plistdir}/${plist}
 }
 
 post-activate {
@@ -66,7 +66,7 @@ post-activate {
     ui_msg "# Run the following command to install the CouchDB launchd"
     ui_msg "# startup item in order to start and re-start service automatically:"
     ui_msg "#"
-    ui_msg "# sudo launchctl load -w /Library/LaunchDaemons/org.apache.couchdb.plist"
+    ui_msg "# sudo launchctl load -w ${plistdir}/${plist}"
     ui_msg "########################################################################"
 }
 
