libhsplasma, PlasmaClient: actually generate gdb debug info in the debug variant
git-svn-id: https://svn.macports.org/repository/macports/trunk@71905 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -47,6 +47,12 @@ pre-activate {
     }
 }
 
+if {[variant_isset debug]} {
+    configure.optflags -O1
+    configure.cflags-append -ggdb
+    configure.cxxflags-append -ggdb
+}
+
 livecheck.type              regex
 livecheck.url               ${hg.url}
 livecheck.version           [lindex [split ${version} -] 1]
