--- a/dports/games/PlasmaClient/Portfile
+++ b/dports/games/PlasmaClient/Portfile
@@ -96,6 +96,12 @@ platform darwin 8 {
     configure.ldflags-append -lcrypto -ljpeg -lz
 }
 
+if {[variant_isset debug]} {
+    configure.optflags -O1
+    configure.cflags-append -ggdb
+    configure.cxxflags-append -ggdb
+}
+
 livecheck.type              regex
 livecheck.url               ${hg.url}
 livecheck.version           [lindex [split ${version} -] 1]
