--- a/dports/math/petsc/Portfile
+++ b/dports/math/petsc/Portfile
@@ -33,18 +33,20 @@ configure.args  --with-python --with-debugging=0 \
 		--with-mpiexec=${prefix}/bin/openmpiexec
 build.env-append    PETSC_DIR=${worksrcpath} PETSC_ARCH=darwin
 post-destroot {
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/RDict.db
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/petscrules
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/petscvariables
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/reconfigure-darwin.py
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/rules
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/test
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/variables
-    reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/include/petscconf.h
-    reinplace "s|${worksrcpath}|${prefix}/petsc|g" ${destroot}${prefix}/lib/petsc/include/petscconf.h
-    reinplace "s|${worksrcpath}|${prefix}/petsc|g" ${destroot}${prefix}/lib/petsc/include/petscmachineinfo.h
-    reinplace "s|${worksrcpath}|${prefix}/petsc|g" ${destroot}${prefix}/lib/petsc/conf/petscvariables
-    reinplace "s|${worksrcpath}|${prefix}/petsc|g" ${destroot}${prefix}/lib/petsc/conf/RDict.db
+    post-destroot {
+       reinplace "s|${destroot}${prefix}|${prefix}|g" ${destroot}${prefix}/lib/petsc/conf/RDict.db \
+                                                      ${destroot}${prefix}/lib/petsc/conf/petscrules \
+                                                      ${destroot}${prefix}/lib/petsc/conf/petscvariables \
+                                                      ${destroot}${prefix}/lib/petsc/conf/reconfigure-darwin.py \
+                                                      ${destroot}${prefix}/lib/petsc/conf/rules \
+                                                      ${destroot}${prefix}/lib/petsc/conf/test \
+                                                      ${destroot}${prefix}/lib/petsc/conf/variables \
+                                                      ${destroot}${prefix}/lib/petsc/include/petscconf.h
+       reinplace "s|${worksrcpath}|${prefix}/petsc|g" ${destroot}${prefix}/lib/petsc/include/petscconf.h \
+                                                      ${destroot}${prefix}/lib/petsc/include/petscmachineinfo.h \
+                                                      ${destroot}${prefix}/lib/petsc/conf/petscvariables \
+                                                      ${destroot}${prefix}/lib/petsc/conf/RDict.db
+    }
 }
 
 # disabled for now; no mpi support in fftw port yet
