lang/ruby19: add port:libffi to depends_lib (#26299)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71907 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ruby19/Portfile
+++ b/dports/lang/ruby19/Portfile
@@ -4,7 +4,7 @@ PortSystem			1.0
 
 name				ruby19
 version				1.9.2-p0
-revision			2
+revision			3
 
 categories			lang ruby
 maintainers			kimuraw openmaintainer
@@ -35,7 +35,8 @@ depends_lib			port:libiconv \
 					port:openssl \
 					port:zlib \
 					port:ncurses \
-					port:libyaml
+					port:libyaml \
+					port:libffi
 
 configure.args		--enable-shared \
 					--mandir="${prefix}/share/man" \
