pianobar: update to 2010.08.21; see #26620
git-svn-id: https://svn.macports.org/repository/macports/trunk@71910 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/pianobar/Portfile
+++ b/dports/audio/pianobar/Portfile
@@ -4,11 +4,13 @@
 PortSystem                  1.0
 
 name                        pianobar
-version                     6a0f620
+version                     2010.08.21
 categories                  audio
 platforms                   darwin
 maintainers                 gmail.com:aguynamedryan+pianobar
 homepage                    http://6xq.net/html/00/17.html
+master_sites                http://6xq.net/media/00/16/
+use_bzip2                   yes
 
 description                 Console-based pandora.com player
 
@@ -19,19 +21,28 @@ long_description            "pianobar" is a console client for the \
                             see why they were selected, show upcoming \
                             configure keybindings, last.fm scrobbling, \
                             proxy support for listening outside of USA.
-                            
-
-fetch.type                  git
-git.url                     git://github.com/PromyLOPh/pianobar.git
-git.branch                  ${version}
 
 depends_lib                 port:libao \
                             port:faad2 \
                             port:libmad
 
-patchfiles                  patch-Makefile.diff
-post-patch {
-    reinplace s|@PREFIX@|${prefix}| ${worksrcpath}/Makefile
-}
+checksums                   md5     980012b848ff24c0398a4a5641e2b76b \
+                            sha1    9ee97c47623fbccdbb91c4a713524aebafd78b68 \
+                            rmd160  4a5bc1278264151e317b78e44c0b84ef509e4463
 
 use_configure               no
+
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+
+build.args                  CC="${configure.cc} ${archflags}" \
+                            PREFIX=${prefix} \
+                            LIBAO_INCLUDE=${prefix}/include \
+                            LIBFAAD_INCLUDE=${prefix}/include \
+                            LIBMAD_INCLUDE=${prefix}/include
+
+destroot.args               PREFIX=${prefix}
