xorg-libX11: Fix header collision between X11/Xlocale.h and xlocale.h
git-svn-id: https://svn.macports.org/repository/macports/trunk@71912 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libX11/Portfile
+++ b/dports/x11/xorg-libX11/Portfile
@@ -5,6 +5,7 @@ PortGroup archcheck 1.0
 
 name		xorg-libX11
 version		1.3.6
+revision	1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org libX11
@@ -48,6 +49,9 @@ configure.args \
 	--disable-specs
 
 build.args V=1
+
+patchfiles 0001-Add-an-X11_-string-to-header-guards-to-avoid-possibl.patch
+patch.pre_args -p1
 
 # Depending on ghostscript for the PDF documentation creates a dependency
 # loop, so you may want to install first without the docs variant
