--- a/dports/x11/xwininfo/Portfile
+++ b/dports/x11/xwininfo/Portfile
@@ -20,7 +20,7 @@ checksums           md5     932cb1393dee3caaf26f3515f640d783 \
 
 depends_build       port:pkgconfig
 
-depends_lib         port:xorg-libXext
+depends_lib         port:xorg-libxcb
 
 livecheck.type      regex
 livecheck.regex     ${name}-(\[\\d.\]+)${extract.suffix}
