--- a/dports/net/ejabberd/Portfile
+++ b/dports/net/ejabberd/Portfile
@@ -3,8 +3,7 @@
 PortSystem          1.0
 
 name                ejabberd
-version             2.1.3
-revision        1
+version             2.1.5
 categories          net
 platforms           darwin
 maintainers         nomaintainer
@@ -14,9 +13,9 @@ long_description    ${description} ejabberd stands for "Erlang Jabber Daemon"
 homepage            http://www.process-one.net/en/ejabberd/
 master_sites        http://www.process-one.net/downloads/ejabberd/${version}/
 
-checksums           md5     e5c87eda5312a6e8a53df0f9b4844b69 \
-                    sha1    77fdf18c0bb3b25cf9045e0c833ba4d82f180469 \
-                    rmd160  c57672928e30f71ec66636dd5e76adb802f17b03
+checksums           md5     2029ceca45584d704ca821a771d6d928 \
+                    sha1    8966d6752219c9386f48a5b8e1f2f8fb0e7477ae \
+                    rmd160  7abd6bc4a03f68d03e13ee8c1ff3a5fee6098dc6
 
 worksrcdir          ${worksrcdir}/src
 
@@ -28,6 +27,8 @@ depends_lib         port:erlang \
 
 # erlang is not universal
 universal_variant   no
+
+patchfiles          ejabberd-md2.patch
 
 configure.args      --with-expat=${prefix} \
                     --with-zlib=${prefix} \
