ruby/rb-pkg-config, rb19-pkg-config: add license info
git-svn-id: https://svn.macports.org/repository/macports/trunk@71923 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/ruby/rb-pkg-config/Portfile
+++ b/dports/ruby/rb-pkg-config/Portfile
@@ -10,6 +10,7 @@ maintainers         kimuraw openmaintainer
 platforms           darwin
 homepage            http://github.com/rcairo/pkg-config
 master_sites		http://production.cf.rubygems.org/gems/
+license				LGPLv2+
 
 checksums           md5     701b408808a0f5eba5b55e73f11acb27 \
                     sha1    66ad7619b0e0517b47aaeca7ba04a2b7a8360e79 \
