--- a/dports/ruby/rb19-rcairo/Portfile
+++ b/dports/ruby/rb19-rcairo/Portfile
@@ -3,7 +3,7 @@
 PortSystem		1.0
 PortGroup		ruby 1.0
 
-ruby.setup		rcairo 1.8.5 extconf.rb \
+ruby.setup		rcairo 1.10.0 extconf.rb \
 				{README.rdoc COPYING GPL samples doc} {} ruby19
 maintainers		kimuraw
 description		Ruby bindings for cairo
@@ -11,17 +11,19 @@ long_description \
 		Ruby bindings for Cairo. Cairo is a 2D graphics library \
 		with support for multiple output devices.
 categories-append	graphics
-checksums		md5  35e83d21994d72b07cc7d33787e99805 \
-				rmd160 ea04525a0b5b38932e7fb2d2e9bf2c8ec97814bf \
-				sha1 2d2fe78d37a976b15d01d3239d4bd22119b23d61
+checksums		md5  4fe76f1069d0d1ccfdf7848e3e928d9f \
+				rmd160 243e39c25c4c633842f7b9f605de7c192b4ed265 \
+				sha1 592fe1f19c6608f98d5170324e9ed479249caae7
 platforms		darwin
 
-depends_lib-append		path:lib/pkgconfig/cairo.pc:cairo
+depends_lib-append		path:lib/pkgconfig/cairo.pc:cairo \
+						port:rb19-pkg-config
 configure.env-append 	PKG_CONFIG=${prefix}/bin/pkg-config
 configure.args-append	--vendor
 
 homepage        http://cairographics.org/rcairo/
 master_sites    http://cairographics.org/releases/
+license			Ruby
 
 test.env-append 	PKG_CONFIG=${prefix}/bin/pkg-config
 test.run		yes
