--- a/dports/x11/xterm/Portfile
+++ b/dports/x11/xterm/Portfile
@@ -4,6 +4,7 @@ PortSystem          1.0
 
 name                xterm
 version             262
+revision            1
 categories          x11
 platforms           darwin
 maintainers         jeremyhu openmaintainer
@@ -31,6 +32,10 @@ depends_lib \
 	port:zlib \
 	port:xorg-libXaw \
 	port:Xft2
+
+patchfiles PR-7191532.patch  xterm-nohide-pointer.patch  xutf8.patch
+
+patch.pre_args -p1
 
 configure.args      --mandir=${prefix}/share/man --enable-luit \
                     --enable-logging --enable-wide-chars \
