mkvtoolnix: update to 4.3.0, remove variants, add missed dependencies (#26647); fix configure failure with nonstandard MacPorts prefix (#23829)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71927 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/mkvtoolnix/Portfile
+++ b/dports/multimedia/mkvtoolnix/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                mkvtoolnix
-version             3.2.0
+version             4.3.0
 categories          multimedia
 maintainers         il.fontys.nl:ruud
 description         Matroska media files manipulation tools.
@@ -15,32 +15,38 @@ homepage            http://www.bunkus.org/videotools/mkvtoolnix/
 platforms           darwin
 master_sites        ${homepage}sources/
 use_bzip2           yes
-patchfiles          patch-configure.diff
 
-# libmatroska is not universal
+# g++-4.2: -E, -S, -save-temps and -M options are not allowed with multiple -arch flags
 universal_variant   no
 
-checksums           md5 9bf31280cb07870771e69de0287dc769 \
-                    sha1 e5d2137402ef6731ee019a472527b77935d301b1 \
-                    rmd160 d4dd843ddfbb741339080dbb729938eedf2505d8
+checksums           md5 6367631773f41e2bb564323f2b1c48a3 \
+                    sha1 70ae0d5769d65b032c15eedc01e914be3245779e \
+                    rmd160 c55a126da2bcf5e36de61113bb64672d5fb44af4
+
+depends_build       port:ruby
 
 depends_lib         port:boost \
+                    port:bzip2 \
                     port:expat \
+                    port:file \
+                    port:flac \
+                    port:gettext \
                     port:libogg \
                     port:libmatroska \
                     port:libvorbis \
+                    port:lzo \
                     port:pcre \
                     port:zlib
 
+build.cmd           ./drake
+build.target        default
+
 configure.args      --mandir=${prefix}/share/man \
-                    --with-boost-regex=boost_regex-mt \
+                    --with-boost=${prefix} \
                     --with-extra-libs=${prefix}/lib \
                     --with-extra-includes=${prefix}/include \
-                    --without-flac \
                     --disable-gui \
                     --disable-wxwidgets
-
-default_variants    +flac
 
 variant wxwidgets description {Build with the wxWidgets GUI} {
     depends_lib-append port:wxWidgets
@@ -50,20 +56,4 @@ variant wxwidgets description {Build with the wxWidgets GUI} {
     configure.args-append \
         --enable-gui \
         --enable-wxwidgets
-}
-
-variant flac description {FLAC support} {
-    depends_lib-append port:flac
-    configure.args-delete --without-flac
-    configure.args-append --with-flac
-}
-
-variant bzip2 description {bzip2 compression support, zlib is more common} {
-    depends_lib-append port:bzip2
-    configure.args-append --enable-bzip2
-}
-
-variant lzo description {lzo compression support, zlib is more common} {
-    depends_lib-append port:lzo
-    configure.args-append --enable-lzo
 }
