mkvtoolnix: update maintainer address
git-svn-id: https://svn.macports.org/repository/macports/trunk@71928 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/mkvtoolnix/Portfile
+++ b/dports/multimedia/mkvtoolnix/Portfile
@@ -6,7 +6,7 @@ PortSystem          1.0
 name                mkvtoolnix
 version             4.3.0
 categories          multimedia
-maintainers         il.fontys.nl:ruud
+maintainers         stack.nl:ruud
 description         Matroska media files manipulation tools.
 long_description    mkvtoolnix will evolve to a set of tools to create, \
                     alter and inspect Matroska files under Linux and other \
