mkvtoolnix: let the wxwidgets variant work on Snow Leopard by indicating wxWidgets' supported_archs; see #25630
git-svn-id: https://svn.macports.org/repository/macports/trunk@71930 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/mkvtoolnix/Portfile
+++ b/dports/multimedia/mkvtoolnix/Portfile
@@ -50,6 +50,10 @@ configure.args      --mandir=${prefix}/share/man \
 
 variant wxwidgets description {Build with the wxWidgets GUI} {
     depends_lib-append port:wxWidgets
+
+    # wxWidgets is 32-bit only
+    supported_archs i386 ppc
+
     configure.args-delete \
         --diable-gui \
         --disable-wxwidgets
