--- a/dports/lang/ocamlduce/Portfile
+++ b/dports/lang/ocamlduce/Portfile
@@ -18,6 +18,7 @@ build.target        opt
 build.args          -f Makefile.ocamlduce
 destroot.args       -f Makefile.ocamlduce
 patchfiles          patch-Makefile.ocamlduce.diff
+configure.universal_args-delete --disable-dependency-tracking
 configure.pre_args  -prefix ${prefix}
 checksums           md5 16e69929c9fbe57642dd700bb595360e
 depends_lib         bin:camlp4:ocaml
