kaffe: add missing deps (#24549), indicate supported archs
git-svn-id: https://svn.macports.org/repository/macports/trunk@71932 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/kaffe/Portfile
+++ b/dports/lang/kaffe/Portfile
@@ -29,11 +29,18 @@ configure.args      --disable-nls \
                     --with-engine=intrp \
                     --mandir=${prefix}/share/man
 
+platform darwin {
+    supported_archs i386 ppc
+}
+
+depends_build       port:jikes
 depends_lib         port:esound \
                     port:gmp \
                     port:gtk2 \
                     port:libart_lgpl \
-                    port:freetype
+                    port:freetype \
+                    port:xorg-libice \
+                    port:xorg-libXtst
 
 livecheck.type      regex
 livecheck.regex     ${name}-(\[0-9.\]+)\\.tar
