xalanc: disable parallel build (#24574), specify correct compiler on all platforms, remove now-unnecessary manual appending of ld archflags
git-svn-id: https://svn.macports.org/repository/macports/trunk@71933 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/xalanc/Portfile
+++ b/dports/textproc/xalanc/Portfile
@@ -28,24 +28,18 @@ worksrcdir		xml-xalan/c
 
 configure.env	XALANCROOT='${workpath}/xml-xalan/c' \
 				XERCESCROOT='${prefix}'
-if {![info exists configure.ld_archflags] && ![variant_isset universal]} {
-    eval configure.ldflags-append ${configure.cc_archflags}
-}
 configure.cmd	./runConfigure
-configure.pre_args -C --prefix=${prefix}
+configure.pre_args -C --prefix=${prefix} \
+                   -c ${configure.cc} -x ${configure.cxx}
 
 platform darwin	{
 	configure.pre_args-append	-p macosx
 }
 
-platform darwin 8 {
-	configure.pre_args-append	-c /usr/bin/gcc-4.0 -x /usr/bin/g++-4.0
-}
-
 build.env		${configure.env}
 build.type		gnu
+use_parallel_build no
 
 destroot.env	${configure.env}
 
 livecheck.type	moddate
-
