libssh2: update to 1.2.7; see #26436
git-svn-id: https://svn.macports.org/repository/macports/trunk@71936 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libssh2/Portfile
+++ b/dports/devel/libssh2/Portfile
@@ -1,3 +1,4 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
@@ -5,8 +6,7 @@ PortGroup  archcheck 1.0
 PortGroup  muniversal 1.0
 
 name		  libssh2
-version		  1.2.4
-revision        1
+version		  1.2.7
 categories	  devel net
 platforms	  darwin
 maintainers	  pmq openmaintainer
@@ -20,11 +20,11 @@ long_description  libssh2 is a library implementing the SSH2 protocol as \
 license		  BSD
 
 homepage	  http://www.libssh2.org/
-master_sites	  ${homepage}download/ sourceforge
+master_sites	  ${homepage}download/
 
-checksums     md5     4d65a66d5f232e5bb1d05b311e43d46d \
-              sha1    dcc8a0b1352114b10db20bf895ecb9e7272de094 \
-              rmd160  1ef203bd7399be1ef0f312cc4317edf766a0dc7f
+checksums     md5     a5d78344886f1282e4008c09bf568076 \
+              sha1    271dd411015cd3656886541c6650a4471458669e \
+              rmd160  cb438958a77df0e194ac83499dfdd78ff4524b0b
 
 depends_lib	  port:openssl port:zlib
 
