--- a/dports/perl/p5-net-ssh2/Portfile
+++ b/dports/perl/p5-net-ssh2/Portfile
@@ -1,9 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         Net-SSH2 0.28
+perl5.setup         Net-SSH2 0.33
 maintainers         oaf.dk:mni
 platforms           darwin
 
@@ -14,8 +15,8 @@ long_description    Net::SSH2 is a perl interface to the libssh2 library. \
                     SSH1) with all of the key exchanges, ciphers, and \
                     compression of libssh2.
 
-checksums           md5     5d6a9c4b2256c34819c0d6f3a0163066 \
-                    sha1    56ef4dadc652d219490b4e0aa3e6d94bd41507c5 \
-                    rmd160  11fc2eaaeffe9105c22b85ce6a3f8b1ef8b64efa
+checksums           md5     96782c938539794c0c2c396a84ea2f09 \
+                    sha1    442c987a9301ff3bb9cfadd4b635655f6eccebcf \
+                    rmd160  65382bba2ef3110182916162472b52e8251cc063
 
 depends_lib-append  port:libssh2
