p5-www-mechanize: update to 1.64, add supported_archs noarch, add modeline; see #26433
git-svn-id: https://svn.macports.org/repository/macports/trunk@71938 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-www-mechanize/Portfile
+++ b/dports/perl/p5-www-mechanize/Portfile
@@ -1,10 +1,13 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem            1.0
 PortGroup             perl5 1.0
 
-perl5.setup           WWW-Mechanize 1.62
+perl5.setup           WWW-Mechanize 1.64
 maintainers           narf_tm openmaintainer
+supported_archs       noarch
+
 description           Handy web browsing in a Perl object
 long_description      WWW::Mechanize, or Mech for short, helps you automate \
                       interaction with a website. It supports performing a \
@@ -17,9 +20,9 @@ long_description      WWW::Mechanize, or Mech for short, helps you automate \
 
 platforms             darwin
 
-checksums             md5 119c74ce2508ae578e95fb2fcafa10b4 \
-                      sha1 8c4d5f6ed37e2bcc40d63f208836d8d309625640 \
-                      rmd160 3ac045ea692037dd6a0444e5f84ca2c3672b4ca9
+checksums             md5     d5bca73178dec9e8028cfb411b9bd00c \
+                      sha1    fd50457ed15a69b363308a3871e6eaa4720404f4 \
+                      rmd160  bd18795951d1f1e3989210ab7957cf9fe2478bc0
 
 depends_lib-append    port:p5-libwww-perl \
                       port:p5-html-parser \
